--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,12 @@ table {
     border: 1px solid black;
 }
 
-th {
-    border: 1px solid black;
-}
-
+th,
 td {
     border: 1px solid black;
+    padding: 5px;
+}
+
+tr:nth-of-type(2n + 2) {
+    background-color: rgb(223, 223, 223);
 }
