--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 .container {
 }
 
+.container > h1 {
+    text-align: center;
+}
+
 table {
     border: 1px solid black;
     margin: 0 auto;
@@ -13,7 +17,7 @@ td {
 }
 
 tr:nth-of-type(2n + 2) {
-    background-color: rgb(223, 223, 223);
+    background-color: rgb(236, 236, 236);
 }
 
 .form-container {
