--- a/styles.css
+++ b/styles.css
@@ -87,3 +87,28 @@ button:active {
     margin-left: 5px;
 }
 
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
+    grid-auto-flow: row;
+    gap: 10px;
+    justify-content: center;
+}
+
+.card {
+    border: 1px solid black;
+    height: 250px;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #FFFFFF50;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.card > div:first-child {
+    font-weight: bold;
+    font-size: 1.2rem;
+}
