--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ tbody tr:nth-of-type(2n + 2) td {
     margin-top: 10px;
     width: fit-content;
     margin: 0 auto;
-    padding: 5px;
+    padding: 10px;
     border-radius: 5px;
     background-color: whitesmoke;
 }
@@ -80,6 +80,7 @@ button:active {
 
 .btn-delete {
     background-color: red;
+    margin-left: 5px;
 }
 
 .btn-delete:hover {
@@ -90,13 +91,13 @@ button:active {
     background-color: rgb(180, 0, 0);
 }
 
-.btn-delete {
-    margin-left: 5px;
+#form > .btn-delete {
+    margin-left: 0px;
 }
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
+    grid-template-columns: repeat(auto-fit, minmax(clamp(200px, 25vw, 300px), 1fr));
     grid-auto-flow: row;
     gap: 10px;
     justify-content: center;
@@ -127,3 +128,10 @@ dialog {
     background: none;
 }
 
+#modal-title > label {
+    padding-right: 19px;
+}
+
+#modal-read > label {
+    padding-right: 10px;
+}
