--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ button:active {
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(clamp(200px, 25vw, 300px), 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(clamp(200px, 250px, 300px), 400px));
     grid-auto-flow: row;
     gap: 10px;
     justify-content: center;
@@ -108,7 +108,8 @@ button:active {
     height: 250px;
     border-radius: 10px;
     padding: 10px;
-    background-color: #FFFFFF50;
+    background-color: #ffffff80;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.185);
 
     display: flex;
     flex-direction: column;
