--- a/styles.css
+++ b/styles.css
@@ -10,11 +10,12 @@ body {
 
 .container > h1 {
     text-align: center;
-    display: inline;
 }
 
 #add-book {
-    display: inline;
+    position: fixed;
+    top: 10px;
+    right: 10px
 }
 
 table {
