--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,6 @@ button:active {
 }
 
 .card {
-    border: 1px solid black;
     height: 250px;
     border-radius: 10px;
     padding: 10px;
@@ -104,6 +103,10 @@ button:active {
 .card > div:first-child {
     font-weight: bold;
     font-size: 1.2rem;
+}
+
+.card > div:not(:last-of-type) {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.11);
 }
 
 dialog {
